--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://github.com/flockers/connect-elasticsearch"
   },
   "dependencies": {
-    "elasticsearch": ">=1.0.3"
+    "elasticsearch": ">=1.0.3",
+    "debug": "^2.2.0"
   },
   "engines": {
     "node": ">=0.4.7"
